# ultimate-tictactoe-alphazero

./: .gitignore  BATCH_SIZE_OPTIMIZATION_REPORT.md  README.md  auto_tune.py  benchmark_batch_size.py  benchmark_selfplay.py  build_cpp.ps1  check_gpu.py  compare_workers.py  dual_network.py  evaluate_best_player.py  evaluate_network.py  game.py  human_play.py  monitor_gpu.py  monitor_simple.py  monitor_training.py  optimize_inference.py  pv_mcts.py  pv_mcts_cpp.py  quick_batch_test.py  requirements.txt  run_training.ps1  self_play.py  self_play_cpp.py  self_play_hybrid.py  self_play_parallel.py  setup.ps1  show_config.py  test_cpp_mcts.py  test_speed.py  train_cycle.py  train_network.py  train_with_log.py  training_checkpoint.json  training_log.txt  visualize_training.py
cpp/: README.md  pyproject.toml  python_bindings.cpp  setup.py  uttt_game.cpp  uttt_game.h  uttt_mcts.cpp  uttt_mcts.h
docs/: BENCHMARK_ANALYSIS.md  CPP_GUIDE.md  FINAL_ANALYSIS.md  README.md  SPEEDUP_GUIDE.md  WORKER_CONFIG.md
